feat: Improve layout and styling

--- a/dat.yaml
+++ b/dat.yaml
@@ -4,4 +4,4 @@ ROOT: '/'
 
 title: A simple website built with Mbake
 
-license: 'Licensed under MIT License'
+license: 'Licensed under MIT License.'
